@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.aonia.map.measurements.project"
    
    KryoTypes <|-- MapMeasurementsKryoTypes
    class MapMeasurementsKryoTypes
    {
        --(constructors)--
        +MapMeasurementsKryoTypes()
    }
    
    Project <|-- MapMeasurementsProject
    class MapMeasurementsProject
    {
        --(constructors)--
        #MapMeasurementsProject()
        --(collection)--
        +MapMeasurementsProject get()
    }
    
    RandomValueFactory <|-- MapMeasurementsRandomValueFactory
    class MapMeasurementsRandomValueFactory
    {
        --(constructors)--
        +MapMeasurementsRandomValueFactory()
        +MapMeasurementsRandomValueFactory(long)
        --(factory)--
        +Angle newAngle()
        +Angle newAngle(Angle minimum, Angle maximum)
        +Area newArea()
        +Area newArea(Area minimum, Area maximum)
        +Distance newDistance()
        +Distance newDistance(Distance minimum, Distance maximum)
        +Speed newSpeed()
    }
    
    KryoUnitTest <|-- MapMeasurementsUnitTest
    class MapMeasurementsUnitTest
    {
        --(collection)--
        #MapMeasurementsRandomValueFactory random()
    }
    
@enduml

